# pytest

./: .gitignore  README.md  pyproject.toml
pyt/: failing_code.py  functions.py
test3/: test_exception.py  test_params.py  test_types.py
tests/: TestFunctions.py  test_fixtures_1.py  test_fixtures_2.py  test_fixtures_2_a.py  test_fixtures_2_b.py  test_functions.py
tests2/: test_scope_1.py  test_scope_2.py
