[tool.poetry]
name = "pyt"
version = "0.1.0"
description = ""
authors = ["Himanshu Puri <himanshu.puri@msci.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
